@@ -49,11 +49,11 @@ public final class FightPits {
 	private static boolean startedGame;
 	public static String currentChampion;
 
-	private static Tile[] GAME_TELEPORTS = { Tile.of(4577, 5086, 0), Tile.of(4571, 5083, 0), Tile.of(4564, 5086, 0), Tile.of(4564, 5097, 0), Tile.of(4571, 5101, 0), Tile.of(4578, 5097, 0) };
+	private static final Tile[] GAME_TELEPORTS = { Tile.of(4577, 5086, 0), Tile.of(4571, 5083, 0), Tile.of(4564, 5086, 0), Tile.of(4564, 5097, 0), Tile.of(4571, 5101, 0), Tile.of(4578, 5097, 0) };
 
 	public static ButtonClickHandler handleFightPitsViewingOrbButtons = new ButtonClickHandler(374, e -> {
 		if (e.getComponentId() >= 5 && e.getComponentId() <= 9)
-			e.getPlayer().setNextTile(Tile.of(FightPitsViewingOrb.ORB_TELEPORTS[e.getComponentId() - 5]));
+			e.getPlayer().tele(Tile.of(FightPitsViewingOrb.ORB_TELEPORTS[e.getComponentId() - 5]));
 		else if (e.getComponentId() == 15)
 			e.getPlayer().stopAll();
 	});
@@ -87,7 +87,7 @@ public final class FightPits {
 								spawns.add(new FightPitsNPC(2739, Tile.of(GAME_TELEPORTS[Utils.random(GAME_TELEPORTS.length)], 3)));
 						else if (minutes == 10)
 							// alot hits appears on players
-							WorldTasks.schedule(new Task() {
+							WorldTasks.scheduleLooping(new Task() {
 
 								@Override
 								public void run() {
@@ -157,7 +157,7 @@ public final class FightPits {
 	public static void enterArena(Player player) {
 		player.lock(5);
 		player.getControllerManager().startController(new FightPitsController());
-		player.setNextTile(Tile.of(GAME_TELEPORTS[Utils.random(GAME_TELEPORTS.length)], 3));
+		player.tele(Tile.of(GAME_TELEPORTS[Utils.random(GAME_TELEPORTS.length)], 3));
 		player.npcDialogue(THHAAR_MEJ_KAH, HeadE.T_CALM_TALK, "Please wait for the signal before fight.");
 		player.setCanPvp(true);
 		player.setCantTrade(true);
@@ -195,7 +195,7 @@ public final class FightPits {
 					player.lock(5);
 					player.addWalkSteps(4585, 5076, 5, false);
 				} else if (type == 2)
-					player.setNextTile(Tile.of(Tile.of(4592, 5073, 0), 2));
+					player.tele(Tile.of(Tile.of(4592, 5073, 0), 2));
 			}
 			refreshFoes();
 			checkPlayersAmmount();
@@ -249,7 +249,7 @@ public final class FightPits {
 			startedGame = false;
 		}
 		gameTask = new GameTask();
-		WorldTasks.schedule(gameTask, end ? Ticks.fromSeconds(60) : Ticks.fromSeconds(10), Ticks.fromSeconds(60));
+		WorldTasks.scheduleLooping(gameTask, end ? Ticks.fromSeconds(60) : Ticks.fromSeconds(10), Ticks.fromSeconds(60));
 
 	}
 
@@ -265,7 +265,7 @@ public final class FightPits {
 	public static void setChampion() {
 		if (arena.isEmpty())
 			return;
-		Player champion = arena.get(0);
+		Player champion = arena.getFirst();
 		currentChampion = champion.getDisplayName();
 		champion.getPackets().setIFText(373, 10, "Current Champion: JaLYt-Ket-" + currentChampion);
 		champion.setFightPitsSkull();
