@@ -34,13 +34,13 @@ public class Shifter extends PestMonsters {
 	@Override
 	public void processNPC() {
 		super.processNPC();
-		Entity target = this.getPossibleTargets().get(0);
+		Entity target = this.getPossibleTargets().getFirst();
 		if (getCombat().process() && !this.withinDistance(target.getTile(), 10) || Utils.random(15) == 0)
 			teleportSpinner(target.getTile());
 	}
 
 	private void teleportSpinner(Tile tile) { // def 3902, death 3903
-		setNextTile(Tile.of(tile));
+		tele(Tile.of(tile));
 		setNextAnimation(new Animation(3904));
 		WorldTasks.schedule(new Task() {
 
