@@ -108,8 +108,8 @@ public final class DungeonPartyManager {
 	public void setLeader(Player player) {
 		leader = player.getUsername();
 		if (team.size() > 1)
-			if (team.get(0).getUsername().equals(leader)) {
-				Player positionZero = team.get(0);
+			if (!team.getFirst().getUsername().equals(leader)) {
+				Player positionZero = team.getFirst();
 				team.remove(player);
 				team.set(0, player);
 				team.add(positionZero);
